made new commit

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Free Web tutorials">
     <meta name="keywords" content="HTML, CSS, JavaScript">
     <meta name="author" content="Mark Ilchenko">
-    <base href="http://localhost:63342/Bootcamp_Homework-01/" target="_blank">
+<!--    <base href="http://localhost:63342/Bootcamp_Homework-01/" target="_blank">-->
     <title>Homework 1</title>
 <!--    Решил еще favicon добавить-->
     <link rel="icon" type="image/x-icon" href="img/Favicon_Logo.svg">
